Bug 521415 - [6.7.0] Network Manager details lack any details except for Mac Address
Summary: [6.7.0] Network Manager details lack any details except for Mac Address
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networks widget (other bugs)
Version First Reported In: 6.6.91
Platform: Fedora RPMs Linux
: HI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 521961 (view as bug list)
Depends on:
Blocks:
 
Reported: 2026-06-12 23:04 UTC by Steve Cossette
Modified: 2026-06-22 06:44 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.1
Sentry Crash Report:


Attachments
Not much in the way of details... (37.26 KB, image/png)
2026-06-12 23:04 UTC, Steve Cossette
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Steve Cossette 2026-06-12 23:04:34 UTC
Created attachment 193117 [details]
Not much in the way of details...

When looking at the network manager's Network Adapter details in the system tray, usually you can find information such as IP address and DNS servers I believe. On 6.7.0, you can only find the mac address. 

See attached screenshot.
Comment 1 Nate Graham 2026-06-15 19:17:53 UTC
Can reproduce with a wired connection. Wi-Fi shows the expected info.
Comment 2 David Edmundson 2026-06-17 13:55:53 UTC
IP has gone from wifi too.
Comment 3 Tobias Fella 2026-06-17 13:57:31 UTC
Regression from https://invent.kde.org/plasma/plasma-nm/-/merge_requests/588
Comment 4 Bug Janitor Service 2026-06-17 14:08:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-nm/-/merge_requests/597
Comment 5 Tobias Fella 2026-06-17 14:37:47 UTC
Git commit 966285944649aa77f43c6f53d1ddd256a002339a by Tobias Fella.
Committed on 17/06/2026 at 14:07.
Pushed by tfella into branch 'master'.

Fix showing network details

Regression from 93165d7babce806b838a3ade3e465bb90dc34372

M  +1    -1    libs/editor/connectiondetails.cpp

https://invent.kde.org/plasma/plasma-nm/-/commit/966285944649aa77f43c6f53d1ddd256a002339a
Comment 6 Tobias Fella 2026-06-17 14:54:53 UTC
Git commit 13c4c9f0c768248aed3fb7dc595f349e1ae78b91 by Tobias Fella.
Committed on 17/06/2026 at 14:38.
Pushed by tfella into branch 'Plasma/6.7'.

Fix showing network details

Regression from 93165d7babce806b838a3ade3e465bb90dc34372

(cherry picked from commit 966285944649aa77f43c6f53d1ddd256a002339a)

M  +1    -1    libs/editor/connectiondetails.cpp

https://invent.kde.org/plasma/plasma-nm/-/commit/13c4c9f0c768248aed3fb7dc595f349e1ae78b91
Comment 7 Antonio Rojas 2026-06-22 06:44:04 UTC
*** Bug 521961 has been marked as a duplicate of this bug. ***