Fix showing network details

BUG: 521415

Regression from 93165d7babce806b838a3ade3e465bb90dc34372